package where.$2_system_logic.$2_on_domain.domain

case class ContractId(value: String)
